--- a/miniprogram/project.config.json
+++ b/miniprogram/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.6.6",
 	"appid": "touristappid",
-	"projectname": "xcxcms",
+	"projectname": "多医院小程序",
 	"condition": {
 		"search": {
 			"current": -1,
