--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -13,7 +13,7 @@
     "window": {
       "backgroundTextStyle": "light",
       "navigationBarBackgroundColor": "#fff",
-      "navigationBarTitleText": "duoyi",
+      "navigationBarTitleText": "健康咨询公司",
       "navigationBarTextStyle": "black"
     },
     "tabBar": {
