--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -11,7 +11,7 @@
     "window": {
       "backgroundTextStyle": "light",
       "navigationBarBackgroundColor": "#6EBBE7",
-      "navigationBarTitleText": "德里福健康",
+      "navigationBarTitleText": "众医康",
       "navigationBarTextStyle": "white"
     },
     "tabBar": {
