--- a/miniprogram/project.config.json
+++ b/miniprogram/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.6.6",
 	"appid": "wx7d7fad3ab5969a0f",
-	"projectname": "%E5%BE%B7%E9%87%8C%E7%A6%8F%E5%81%A5%E5%BA%B7",
+	"projectname": "%E4%BC%97%E5%8C%BB%E5%BA%B7",
 	"condition": {
 		"search": {
 			"current": -1,
